--- a/src/App.css
+++ b/src/App.css
@@ -2,4 +2,9 @@
   margin: 0;
   padding: 0;
   box-sizing: border-box;
+  -ms-overflow-style: none;  
+  scrollbar-width: none;
+}
+*::-webkit-scrollbar {
+  display: none;
 }
